--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,3 +33,77 @@ body {
 .red {
 	color: #FF0000;
 }
+
+.topnav {
+  overflow: hidden;
+  background-color: #434344;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.img {
+    background-image: url('../images/app-icon.png');
+}
+
+.search {
+  width: 100%;
+  position: relative
+}
+
+.searchTerm {
+  
+  width: 20%;
+  
+  padding: 5px;
+  margin-left: 25%;
+  margin-top: 15px;
+  height: 25px;
+  border-radius: 5px;
+  outline: none;
+  color: #9DBFAF;
+}
+
+.searchTerm:focus{
+  color: #00B4CC;
+}
+
+.searchButton {
+  position: absolute;  
+  top: 15px;
+  width: 40px;
+  height: 25px;
+  //background: #00B4CC;
+  
+  text-align: center;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/*Resize the wrap to see the search bar change!*/
+.wrap{
+  width: 30%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
