--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,6 +17,7 @@ html {
     min-height: 100%;
 }
 
+
 .footer {
     height: 60px;
     background-color: #f5f5f5;
@@ -26,7 +27,10 @@ html {
 .customPadding {
     padding: 15px;
 }
-
+i {
+    width: 15px;
+    height: 10px;
+}
 .center {
     float: none;
     margin: 0 auto
@@ -100,6 +104,8 @@ fixed-top-below {
 .topnav {
   overflow: hidden;
   background-color: #434344;
+  margin: 0;
+  padding: 0;
 }
 
 .topnav a {
