--- a/views/homepagenav.jade
+++ b/views/homepagenav.jade
@@ -6,8 +6,9 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
   body
-    .topnav
+  .topnav
       .img(alt='appicon')
       a(href='#groceries') Groceries
       a(href='#pharmacy') Pharmacy
